# binomial-confidence-interval

./: .gitignore  CHANGELOG.md  LICENSE  binomial-confidence-interval.cabal  plot-rate.py  plot-width.py
app/: Main.hs
