cabal-version:      3.4
name:               binomial-confidence-interval
version:            0
-- synopsis:
-- description:
homepage:           https://github.com/fumieval/binomial-confidence-interval
license:            BSD-3-Clause
license-file:       LICENSE
author:             Fumiaki Kinoshita
maintainer:         fumiexcel@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable binomial-confidence-interval
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1, random-fu, random, erf, statistics
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Wall
